--- a/DueDate/trunk/res/values/strings.xml
+++ b/DueDate/trunk/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="hello">Hello World, DueDate!</string>
-    <string name="app_name">DueDate:</string>
+    <string name="app_name">DueDate</string>
     
     
 </resources>
